# llm-council

./: .env.example  .gitignore  Dockerfile  README.md  USAGE.md  best-of-n-ollama-open-webui-plan.md  docker-compose.yml  pyproject.toml  stack.sh
app/: __init__.py  config.py  logging_utils.py  main.py  ollama.py  schemas.py  service.py
config/: proxy-config.yaml  stack-config.json  stack-config.json.example
tests/: test_api.py  test_config.py  test_service.py
